# boom-ros2

./: .gitignore  .gitmodules  README.md
boom_encoders/: package.xml  setup.py
boom_interfaces/: package.xml
boom_interfaces/msg/: LegConfig.msg  LegInfo.msg  ODriveCommandArray.msg  ODriveInfoArray.msg
boom_leg_kinematics/: CMakeLists.txt  package.xml
boom_leg_kinematics/include/boom_leg_kinematics/: LegKinematicsNode.hpp
boom_leg_kinematics/include/boom_leg_kinematics/models/: FiveBar2D.hpp
boom_leg_kinematics/src/: leg_kinematics_node.cpp
boom_motor_controller/: setup.py
boom_motor_controller/boom_motor_controller/: boom_motor_controller_node.py  odrive_can_tool.py
docker/: Dockerfile  run_docker.sh
docs/: 99-teensy.rules  configure_odrive.py  connect-to-hotspot.sh  connect-to-vicon.sh  install.sh  matlab-setup.md  odrive-cansimple.dbc  pi-setup.md  setup-can.sh  setupcan-jetson.sh  update-boom.sh  view-ros.sh
docs/can/: can0setup.service  start-can0.sh
docs/startup/: boom-update.service  boom.service  boomsetup.service  start-boom.sh  start-can0.sh  update-boom.sh
l3harris_motor_joy/: package.xml  setup.cfg
l3harris_motor_joy/l3harris_motor_joy/: joystick_node.py
launch/: boom.launch
matlab/: BoomController.asv  BoomController.m  README.md  STARQController.m  boom_recording.m  convertTrajectoryToGoalMsg.m  defaultFiveBar2DLegConfig.m  encoder_error_bug.m  example_trajectory.m  gazebo_trajectory.asv  gazebo_trajectory.m  gen_msgs.m  generateMsgs.m  generateMsgsAll.m  hop_maker.m  hop_trajectory.asv  hop_trajectory.m  hop_trajectory2.m  jump.mat  leg_configuration_test.m  load_trajectory.m  motor_configuration_test.asv  motor_configuration_test.m  motor_data_square.mat  motor_tuner.m  playback_plotter.m  run_trajectory.m  run_trajectory_test.m  square_maker.m  test_fk.m
matlab/custom/matlab_msg_gen/win64/src/starq_interfaces/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
matlab/custom/matlab_msg_gen/win64/src/starq_interfaces/include/starq_interfaces/: visibility_control.h
matlab/custom/matlab_msg_gen/win64/src/starq_interfaces/m/+ros/+internal/+ros2/+custommessages/+starq_interfaces/: configureLegsRequest.m  legCommand.m  legConfig.m  oDriveConfig.m  oDriveInfo.m  oDriveInfoArray.m  runLegTrajectoryFeedback.m  runLegTrajectoryResult.m  starq_interfaces_msg_LegCommandArray_2To1_Converter.m  starq_interfaces_msg_LegCommand_1To2_Converter.m  starq_interfaces_msg_LegCommand_2To1_Converter.m  starq_interfaces_msg_LegConfig_1To2_Converter.m  starq_interfaces_msg_LegConfig_2To1_Converter.m  starq_interfaces_msg_LegInfoArray_1To2_Converter.m  starq_interfaces_msg_LegInfo_1To2_Converter.m  starq_interfaces_msg_ODriveCommandArray_1To2_Converter.m  starq_interfaces_msg_ODriveCommand_1To2_Converter.m  starq_interfaces_msg_ODriveCommand_2To1_Converter.m  starq_interfaces_msg_ODriveConfig_1To2_Converter.m  starq_interfaces_msg_ODriveConfig_2To1_Converter.m  starq_interfaces_msg_ODriveInfoArray_2To1_Converter.m  starq_interfaces_msg_ODriveInfo_2To1_Converter.m
matlab/custom/matlab_msg_gen/win64/src/starq_interfaces/msg/: LegCommandArray.msg  ODriveInfo.msg  ODriveInfoArray.msg
matlab/custom/matlab_msg_gen/win64/src/starq_interfaces/src/: starq_interfaces_ConfigureLegs_service.cpp  starq_interfaces_ConfigureMotors_service.cpp  starq_interfaces_LegCommandArray_message.cpp  starq_interfaces_LegCommand_message.cpp  starq_interfaces_LegConfig_message.cpp  starq_interfaces_LegInfoArray_message.cpp  starq_interfaces_LegInfo_message.cpp  starq_interfaces_ODriveCommandArray_message.cpp  starq_interfaces_ODriveCommand_message.cpp  starq_interfaces_ODriveConfig_message.cpp  starq_interfaces_ODriveInfoArray_message.cpp  starq_interfaces_ODriveInfo_message.cpp  starq_interfaces_RunLegTrajectory_action.cpp
matlab/debug/: ik_debug.m
matlab/share/: BaseController.asv  BaseController.m  BasicController.m  BoomController.m  BoomController2.m  LegController.m  LegTrajectoryPublisher.m  MotorTrajectoryPublisher.m  ODriveController.m  SBMPOServer.m  TopicRecorder.m  TrajectoryPublisher.m  defaultFiveBar2DLegConfig.m  defaultMotorConfig.m  defaultODriveConfig.m  defaultSBMPOParameters.m  matrixToJointTrajectory.m  matrixToLegTrajectoryGoal.m  matrixToMotorTrajectoryGoal.m  matrixToRunLegTrajectoryGoal.m  parseBoomData.m  parseBoomEncodersInfoData.m  parseLegData.m  parseMotorData.m  parseMotorInfoArrayData.m  pauseSafe.m
matlab/sim/: generate_trajectory.m  params_v1.m  ros_send_trajectory.m  version1.slx  version1.slxc
matlab/tests/: hopping_tests.m  legTest.m  moteus_stall_test.m  temperature_test.m  velocity_test.m
matlab/trajectories/: extendedBehind60PerFootSpace.csv  gaitDesignApp.mlapp  latest.mat  latestFootSpace.csv  latestMotorSpace.csv  sevenPtTrajSwimSweepFootSpace.csv  test30Per2.mat  test30Per2FootSpace.csv  test30Per2MotorSpace.csv  test40Per.mat  test40Per1.mat  test40Per1FootSpace.csv  test40Per1MotorSpace.csv  test40Per2.mat  test40Per3.mat  (+7 more)
pi-old/boom_trajectory_publisher/: CMakeLists.txt  package.xml
pi-old/boom_trajectory_publisher/src/: leg_trajectory_publisher_server.cpp  motor_trajectory_publisher_server.cpp
starq_boom_encoders/: package.xml  setup.cfg  setup.py
starq_description/: CMakeLists.txt  package.xml
starq_interfaces/: CMakeLists.txt  package.xml
starq_interfaces/action/: RunLegTrajectory.action  RunMotorTrajectory.action
starq_interfaces/msg/: BoomEncoderInfo.msg  LegConfig.msg  LegInfoArray.msg  LegState.msg  ODriveCommandArray.msg  ODriveConfig.msg  ODriveInfo.msg  ODriveInfoArray.msg
starq_interfaces/srv/: ConfigureLeg.srv  ConfigureLegs.srv  ConfigureMotor.srv
starq_leg_kinematics/: CMakeLists.txt  package.xml
starq_motor_controller/: package.xml  setup.cfg  setup.py
starq_sbmpo/: CMakeLists.txt  package.xml
starq_sbmpo/include/starq_sbmpo/: STARQModel.hpp
starq_sbmpo/src/: starq_sbmpo_action_server.cpp
starq_trajectory_publisher/: CMakeLists.txt  package.xml
starq_trajectory_publisher/src/: leg_trajectory_publisher_server.cpp  motor_trajectory_publisher_server.cpp  trajectory_publisher_server.cpp
(+210 files in other folders)
