<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>starq_sbmpo</name>
  <version>1.0.0</version>
  <description>STARQ SBMPO Package</description>
  <maintainer email="jboylan@fsu.edu">Jonathan Boylan</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sbmpo_ros2</depend>
  <depend>nvblox_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
