cmake_minimum_required(VERSION 3.5)
project(starq_interfaces)
set(CMAKE_VERBOSE_MAKEFILE ON)
# Set CMAKE_BUILD_TYPE
set(CMAKE_BUILD_TYPE Release)
# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()
# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()
if(ALIAS_ROS2_TF2)
  add_definitions(-Dtf2=ros2_tf2)
  add_definitions(-Dtf2_ros=ros2_tf2_ros)
  add_definitions(-Dmessage_filters=ros2_message_filters)
endif()
# find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_ros REQUIRED)
find_package(rosidl_typesupport_c REQUIRED)
find_package(rosidl_typesupport_cpp REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package( action_msgs REQUIRED)
find_package( builtin_interfaces REQUIRED)
find_package( class_loader REQUIRED)
find_package( console_bridge REQUIRED)
find_package( rclcpp REQUIRED)
find_package( rcutils REQUIRED)
find_package( unique_identifier_msgs REQUIRED)
include_directories("C:/Program Files/MATLAB/R2023a/extern/include")
include_directories("C:/Program Files/MATLAB/R2023a/extern/include/MatlabDataArray")
include_directories("C:/Program Files/MATLAB/R2023a/toolbox/ros/include/ros2")
include_directories("include/starq_interfaces")
set (CMAKE_SKIP_BUILD_RPATH false)
set (CMAKE_BUILD_WITH_INSTALL_RPATH true)
set (CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
set (CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
set(msg_files
  "msg/LegCommand.msg"
  "msg/LegCommandArray.msg"
  "msg/LegConfig.msg"
  "msg/LegInfo.msg"
  "msg/LegInfoArray.msg"
  "msg/ODriveCommand.msg"
  "msg/ODriveCommandArray.msg"
  "msg/ODriveConfig.msg"
  "msg/ODriveInfo.msg"
  "msg/ODriveInfoArray.msg"
)
set(srv_files
  "srv/ConfigureLegs.srv"
  "srv/ConfigureMotors.srv"
)
set(action_files
  "action/RunLegTrajectory.action"
)
rosidl_generate_interfaces(${PROJECT_NAME}
  ${msg_files}
  ${srv_files}
  ${action_files}
  DEPENDENCIES 
  action_msgs
  builtin_interfaces
  unique_identifier_msgs
)
link_directories("C:/Program Files/MATLAB/R2023a/extern/lib/win64/microsoft")
# Library
add_library(
    starq_interfaces_matlab 
    SHARED
    src/starq_interfaces_LegCommand_message.cpp
    src/starq_interfaces_LegCommandArray_message.cpp
    src/starq_interfaces_LegConfig_message.cpp
    src/starq_interfaces_LegInfo_message.cpp
    src/starq_interfaces_LegInfoArray_message.cpp
    src/starq_interfaces_ODriveCommand_message.cpp
    src/starq_interfaces_ODriveCommandArray_message.cpp
    src/starq_interfaces_ODriveConfig_message.cpp
    src/starq_interfaces_ODriveInfo_message.cpp
    src/starq_interfaces_ODriveInfoArray_message.cpp
    src/starq_interfaces_ConfigureLegs_service.cpp
    src/starq_interfaces_ConfigureMotors_service.cpp
    src/starq_interfaces_RunLegTrajectory_action.cpp
)
if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
target_compile_options(starq_interfaces_matlab PUBLIC 
  $<$<OR:$<COMPILE_LANGUAGE:CXX>,$<COMPILE_LANGUAGE:C>>:
  -Wall -Wextra -Wpedantic
  >)
endif()
target_include_directories(starq_interfaces_matlab PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
target_link_libraries( starq_interfaces_matlab
	"libMatlabDataArray"
	"C:/Program Files/MATLAB/R2023a/sys/ros2/win64/ros2/lib/rclcpp_action.lib"
	${CMAKE_DL_LIBS}
	)
ament_target_dependencies(
  starq_interfaces_matlab
  "action_msgs"
  "builtin_interfaces"
  "class_loader"
  "console_bridge"
  "rclcpp"
  "rcutils"
  "unique_identifier_msgs"
)
rosidl_target_interfaces(
	  starq_interfaces_matlab
      ${PROJECT_NAME} "rosidl_typesupport_cpp")
# Causes the visibility macros to use dllexport rather than dllimport,
# which is appropriate when building the dll but not consuming it.
target_compile_definitions(starq_interfaces_matlab PRIVATE "STARQ_INTERFACES_BUILDING_LIBRARY")
install(
  DIRECTORY include/
  DESTINATION include
)
ament_export_targets(export_${PROJECT_NAME} HAS_LIBRARY_TARGET)
ament_export_dependencies(
  action_msgs
  builtin_interfaces
  class_loader
  console_bridge
  rclcpp
  rcutils
  unique_identifier_msgs
)
install(
  TARGETS starq_interfaces_matlab
  EXPORT export_${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)
install (DIRECTORY m/ DESTINATION m/ FILES_MATCHING PATTERN "*.m")
ament_export_include_directories(
  include
)
ament_export_libraries(
  starq_interfaces_matlab
)
foreach(file_i ${CUDA_BINS})
add_custom_command(
                   TARGET 
                   POST_BUILD
                   COMMAND ${CMAKE_COMMAND}
                   ARGS -E copy ${PROJECT_SOURCE_DIR}/src/${file_i} ${CMAKE_INSTALL_PREFIX}/_ert_rtw/${file_i}
				   )
add_custom_command(
                   TARGET 
                   POST_BUILD
                   COMMAND ${CMAKE_COMMAND}
                   ARGS -E copy ${PROJECT_SOURCE_DIR}/src/${file_i} ${CMAKE_INSTALL_PREFIX}/codegen/exe//${file_i}
				   )				   
endforeach(file_i)
ament_package()
# Generated on Wed Jun 21 21:32:50 2023
